--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta charset="utf-8" >
+    <meta http-equiv="x-ua-compatible" content="ie=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="./css/css.style" >
     <title>WebStudio</title>
@@ -10,12 +10,15 @@
   <body>
     <header>
       <a href="#" class="text">WebStudio</a>
-      <ul>
-        <li><a href="#">Студія</a></li>
-        <li><a href="#">Портфоліо</a></li>
-        <li><a href="#">Контакти</a></li>
-      </ul>
-      <a href="mailto:info@devstudio.com">Імейл</a>
+        <nav class="menu">
+          <ul>
+            <li><a href="#">Студія</a></li>
+            <li><a href="#">Портфоліо</a></li>
+            <li><a href="#">Контакти</a></li>
+          </ul>
+        </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <section>
@@ -58,16 +61,16 @@
       <section>
         <h2>Чим ми займаємося</h2>
 
-        <img src="./img/img1.jpg" alt="пише код" width="370" height="294" >
+        <img src="./images/img1.jpg" alt="пише код" width="370" height="294" >
 
         <img
-          src="./img/img2.jpg"
+          src="./images/img2.jpg"
           alt="працює за комп'ютером"
           width="370"
           height="294"
         >
         <img
-          src="./img/img3.jpg"
+          src="./images/img3.jpg"
           alt="вибирає колір"
           width="370"
           height="294"
@@ -76,7 +79,7 @@
       <section>
         <h2>Наша команда</h2>
         <img
-          src="./img/photo1.jpg"
+          src="./images/photo1.jpg"
           alt="Ігор Дем'яненко"
           width="270"
           height="260"
@@ -85,7 +88,7 @@
         <h4>Product Designer</h4>
 
         <img
-          src="./img/photo2.jpg"
+          src="./images/photo2.jpg"
           alt="Ольга Рєпіна"
           width="270"
           height="260"
@@ -94,7 +97,7 @@
         <h4>Frontend Developer</h4>
         <div></div>
         <img
-          src="./img/photo3.jpg"
+          src="./images/photo3.jpg"
           alt="Микола Тарасов"
           width="270"
           height="260"
@@ -103,7 +106,7 @@
         <h4>Marketing</h4>
 
         <img
-          src="./img/photo4.jpg"
+          src="./images/photo4.jpg"
           alt="Михайло Єрмаков"
           width="270"
           height="260"
