--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="#" class="text">WebStudio</a>
+      <a href="./index.html" class="text">WebStudio</a>
         <nav class="menu">
           <ul>
             <li><a href="#">Студія</a></li>
@@ -116,7 +116,7 @@
       </section>
     </main>
     <footer>
-      <a href="#" class="text">WebStudio</a>
+      <a href="./index.html" class="text">WebStudio</a>
       <address>
         <ul>
           <li>м. Київ, пр-т Лесі Українки, 26</li>
