--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           height="260"
         >
         <h3>Ігор Дем'яненко</h3>
-        <h4>Product Designer</h4>
+        <p>Product Designer</pз>
 
         <img
           src="./images/photo2.jpg"
@@ -94,7 +94,7 @@
           height="260"
         >
         <h3>Ольга Рєпіна</h3>
-        <h4>Frontend Developer</h4>
+        <p>Frontend Developer</p>
         <div></div>
         <img
           src="./images/photo3.jpg"
@@ -103,7 +103,7 @@
           height="260"
         >
         <h3>Микола Тарасов</h3>
-        <h4>Marketing</h4>
+        <p>Marketing</p>
 
         <img
           src="./images/photo4.jpg"
@@ -112,7 +112,7 @@
           height="260"
         >
         <h3>Михайло Єрмаков</h3>
-        <h4>UI Designer</h4>
+        <p>UI Designer</p>
       </section>
     </main>
     <footer>
