--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
             <li><a href="#">Контакти</a></li>
           </ul>
         </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="+380961111111">+38 096 111 11 11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      
+    </ul>
     </header>
     <main>
       <section>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-      <button class="button">Замовити послугу</button>
-      
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button class="button">Замовити послугу</button>
+      </section>
+
+      <section>
+        <h2>Особливості</h2>
+
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -35,7 +43,7 @@
           </li>
 
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
@@ -43,14 +51,14 @@
           </li>
 
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
 
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -60,68 +68,72 @@
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
+          <ul> 
+            <li><img src="./images/img1.jpg" alt="пише код" width="370" height="294" ></li>
 
-        <img src="./images/img1.jpg" alt="пише код" width="370" height="294" >
-
-        <img
-          src="./images/img2.jpg"
-          alt="працює за комп'ютером"
-          width="370"
-          height="294"
-        >
-        <img
-          src="./images/img3.jpg"
-          alt="вибирає колір"
-          width="370"
-          height="294"
-        >
+            <li><img
+              src="./images/img2.jpg"
+              alt="працює за комп'ютером"
+              width="370"
+              height="294"
+            ></li>
+            <li><img
+              src="./images/img3.jpg"
+              alt="вибирає колір"
+              width="370"
+              height="294"
+            ></li>
+          </ul>
       </section>
+
       <section>
         <h2>Наша команда</h2>
-        <img
-          src="./images/photo1.jpg"
-          alt="Ігор Дем'яненко"
-          width="270"
-          height="260"
-        >
-        <h3>Ігор Дем'яненко</h3>
-        <p>Product Designer</pз>
+        <ul>
+          <li><img
+            src="./images/photo1.jpg"
+            alt="Ігор Дем'яненко"
+            width="270"
+            height="260"
+          >
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p></li>
 
-        <img
-          src="./images/photo2.jpg"
-          alt="Ольга Рєпіна"
-          width="270"
-          height="260"
-        >
-        <h3>Ольга Рєпіна</h3>
-        <p>Frontend Developer</p>
-        <div></div>
-        <img
-          src="./images/photo3.jpg"
-          alt="Микола Тарасов"
-          width="270"
-          height="260"
-        >
-        <h3>Микола Тарасов</h3>
-        <p>Marketing</p>
+          <li><img
+            src="./images/photo2.jpg"
+            alt="Ольга Рєпіна"
+            width="270"
+            height="260"
+          >
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p></li>
 
-        <img
-          src="./images/photo4.jpg"
-          alt="Михайло Єрмаков"
-          width="270"
-          height="260"
-        >
-        <h3>Михайло Єрмаков</h3>
-        <p>UI Designer</p>
+          <li><img
+            src="./images/photo3.jpg"
+            alt="Микола Тарасов"
+            width="270"
+            height="260"
+          >
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p></li>
+
+          <li><img
+            src="./images/photo4.jpg"
+            alt="Михайло Єрмаков"
+            width="270"
+            height="260"
+          >
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p></li>
+        </ul>
       </section>
     </main>
     <footer>
       <a href="./index.html" class="text">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
-          <li>info@devstudio.com</li>
-          <li>+38 096 111 11 11</li>
+          <li><a href="http://www.google.com/search?q=м.+київ%2C+пр-т+лесі+українки%2C+26&oq=&aqs=chrome/" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
